<resources>
    <string name="app_name">Music Player</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="login">Login</string>
    <string name="resendOTP">Resend OTP</string>
    <string name="confirm">Confirm</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="logout">logout</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="title_activity_home0">Home0</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="create_account">CREATE ACCOUNT</string>
    <string name="already_user">Already a user?</string>
    <string name="login_button">LOG IN</string>
    <string name="welcome_text">Sign up for free music on your phone, tablet, and computer.</string>
    <string name="emailExist">Email already exists. Please use another email.</string>

</resources>
